--- a/plugins/lgdis/app/views/shelters/_list.html.erb
+++ b/plugins/lgdis/app/views/shelters/_list.html.erb
@@ -33,14 +33,12 @@
             shelter.shelter_sort), {:include_blank => true, :disabled => @disabled} %>
         </td>
         <td style="text-align: center;" nowrap>
-          <%= text_field_tag "shelters[#{shelter.id}][opened_date]", shelter.opened_date, :size => "10", :disabled => @disabled %>
-          <%= calendar_for("shelters_#{shelter.id}_opened_date") %>
-          <%= text_field_tag "shelters[#{shelter.id}][opened_hm]", shelter.opened_hm, :size => "5", :disabled => @disabled %>
+          <%= text_field_tag "shelters[#{shelter.id}][opened_at]",format_time_for_input(shelter, :opened_at), :size => "16", :disabled => @disabled %>
+          <%= calendar_with_time_for("shelters_#{shelter.id}_opened_at") %>
         </td>
         <td style="text-align: center;" nowrap>
-          <%= text_field_tag "shelters[#{shelter.id}][closed_date]", shelter.closed_date, :size => "10", :disabled => @disabled %>
-          <%= calendar_for("shelters_#{shelter.id}_closed_date") %>
-          <%= text_field_tag "shelters[#{shelter.id}][closed_hm]", shelter.closed_hm, :size => "5", :disabled => @disabled %>
+          <%= text_field_tag "shelters[#{shelter.id}][closed_at]",format_time_for_input(shelter, :closed_at), :size => "16", :disabled => @disabled %>
+          <%= calendar_with_time_for("shelters_#{shelter.id}_closed_at") %>
         </td>
         <td style="text-align: right;"><%= shelter.capacity %></td>
         <td style="text-align: right;"><%= shelter.head_count %></td>
