--- a/plugins/lgdis/app/views/shelters/_form.html.erb
+++ b/plugins/lgdis/app/views/shelters/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.text_field key,:size=>'50',:disabled => @disabled %>
   <% end %>
   
-  <%= field_for :name_kana, :required => true do |key, label| %>
+  <%= field_for :name_kana do |key, label| %>
     <%= label_tag{label} %>
     <%= f.text_field key,:size=>'100',:disabled => @disabled %>
   <% end %>
