避難所、避難勧告の登録・更新画面にて詳細はadmin権限を持つユーザのみ表示する

--- a/plugins/lgdis/app/views/shelters/_form.html.erb
+++ b/plugins/lgdis/app/views/shelters/_form.html.erb
@@ -115,6 +115,7 @@
   </div>
 </div>
 
+<% if User.current.admin? %>
 <fieldset class="collapsible normal_font no_padding">
   <legend id="shelters_detail" onclick="toggleFieldset(this);">
     <%= l(:label_detail) %>
@@ -232,6 +233,7 @@
     <% end %>
   </div>
 </fieldset>
+<% end %>
 
 <% include_calendar_headers_tags %>
 
