--- a/plugins/lgdis/app/views/delivery_histories/index.html.erb
+++ b/plugins/lgdis/app/views/delivery_histories/index.html.erb
@@ -33,10 +33,10 @@
             <td style="text-align: left;"><%= DST_LIST['delivery_place'][d_h.delivery_place_id]['name'] %></td>
             <td style="text-align: left;"><%= DST_LIST['status'][d_h.status] %></td>
             <td style="text-align: left;"><%= format_time(d_h.created_at) %></td>
-            <td style="text-align: left;"><%= d_h.request_user.lastname + d_h.request_user.firstname %></td>
+            <td style="text-align: left;"><%= d_h.request_user.lastname + d_h.request_user.firstname if d_h.request_user.present? %></td>
             <td style="text-align: left;"><%= d_h.issue.subject %></td>
             <td style="text-align: left;"><%= format_time(d_h.process_date)  if d_h.process_date.present?%></td>
-            <td style="text-align: left;"><%= d_h.respond_user.lastname + d_h.respond_user.firstname %></td>
+            <td style="text-align: left;"><%= d_h.respond_user.lastname + d_h.respond_user.firstname if d_h.respond_user.present? %></td>
           </tr>
         <% end %>
       <% end %>
