--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -35,9 +35,9 @@
         </div>
       </div>
     </div>
-    
+
     <fieldset class="collapsible"><legend><%= l(:commons) %></legend>
-    
+
     <div class="search_condition tabular">
       <div class="splitcontent">
         <div class="splitcontentleft">
@@ -45,7 +45,6 @@
             <label>情報の更新種別</label>
             <%= select_tag 'issue[type_update]',
               options_for_select(@issue_const["type_update"].invert, @issue.type_update) %>
-
           </p>
         </div>
         <div class="splitcontentright">
@@ -71,7 +70,6 @@
             <%= select_tag 'issue[delivered_area]',
               options_for_select(@area.invert, @issue.delivered_area),
               {:multiple => true, :size =>3} %>
-
           </p>
         </div>
       </div>
@@ -93,6 +91,19 @@
         </div>
       </div>
     </div>
+    <% if DST_LIST["general_info_ids"].include?(@issue.tracker_id) %>
+      <div class="search_condition tabular">
+        <div class="splitcontent">
+          <div class="splitcontentleft">
+            <p>
+              <label>情報の識別区分</label>
+              <%= select_tag 'issue[disaster_info_type]',
+                options_for_select(@issue_const["disaster_info_type"].invert, @issue.disaster_info_type) %>
+            </p>
+          </div>
+        </div>
+      </div>
+    <% end %>
     <div class="search_condition tabular">
       <div class="splitcontent">
         <div class="splitcontentleft">
