チケット配信要求の配信対象地域（複数選択可セレクトボックス）で、未選択時にリクエストパラメータに項目自体が無くなってしまう不具合を修正

--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -79,6 +79,7 @@
             <%= select_tag 'issue[delivered_area]',
               options_for_select(@area.invert, (@issue.delivered_area ||"").split(",") ),
               {:multiple => true, :size =>3} %>
+            <%= hidden_field_tag 'issue[delivered_area]', '' %><%# select_tagヘルパーで複数選択可の場合、未選択時にpostされないため（selectヘルパーの場合は、ヘルパーで自動的にhidden項目が追加されるので問題無し） %>
           </p>
         </div>
       </div>
