--- a/plugins/lgdis/app/views/layouts/_view_layouts_base_html_head.html.erb
+++ b/plugins/lgdis/app/views/layouts/_view_layouts_base_html_head.html.erb
@@ -1,1 +1,4 @@
+<%= stylesheet_link_tag(controller.controller_name, :plugin => 'lgdis') \
+      if File.exist?("#{Rails.root}/public/plugin_assets/lgdis/stylesheets/" +
+                      "#{controller.controller_name}.css") %><%# lgdisプラグインで用意したコントローラ名.cssを自動読込 %>
 <%= stylesheet_link_tag 'jquery-ui-timepicker-addon', :plugin => 'lgdis' %>
