--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -76,10 +76,10 @@
         <div class="splitcontentright">
           <p>
             <label>情報の配信対象地域</label>
-            <%= select_tag 'issue[delivered_area]',
+            <%= select_tag 'issue[delivered_area][]',
               options_for_select(@area.invert, (@issue.delivered_area ||"").split(",") ),
               {:multiple => true, :size =>3} %>
-            <%= hidden_field_tag 'issue[delivered_area]', '' %><%# select_tagヘルパーで複数選択可の場合、未選択時にpostされないため（selectヘルパーの場合は、ヘルパーで自動的にhidden項目が追加されるので問題無し） %>
+            <%= hidden_field_tag 'issue[delivered_area][]', '' %><%# select_tagヘルパーで複数選択可の場合、未選択時にpostされないため（selectヘルパーの場合は、ヘルパーで自動的にhidden項目が追加されるので問題無し） %>
           </p>
         </div>
       </div>
