--- a/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
@@ -105,7 +105,7 @@ custom_map_fields_ids = CF_ADDRESS.first
 end
 %>
 <fieldset class="collapsible collapsed" >
-<legend onclick="toggleFieldset(this); init('<%= area_dai_value -%>','<%= area_tyu_value -%>','<%= area_syo_value -%>');"><%= l(:map) %></legend>
+<legend onclick="toggleFieldset(this); init('<%= area_dai_value -%>','<%= area_tyu_value -%>','<%= area_syo_value -%>');"><%= l(:label_map) %></legend>
     <div style="display: none;" id="map" class="map_field"></div>
 </fieldset>
 
