--- a/plugins/lgdis/app/views/delivery_histories/index.html.erb
+++ b/plugins/lgdis/app/views/delivery_histories/index.html.erb
@@ -31,7 +31,7 @@
                <%= link_to d_h.issue_id, issue_path(d_h.issue) %>
             </td>
             <td style="text-align: left;"><%= DST_LIST['delivery_place'][d_h.delivery_place_id]['name'] %></td>
-            <td style="text-align: left;"><%= DST_LIST['status'][d_h.status] %></td>
+            <td style="text-align: left;"><%= l(d_h.status, :scope => "delivery_status") %></td>
             <td style="text-align: left;"><%= format_time(d_h.created_at) %></td>
             <td style="text-align: left;"><%= d_h.request_user.lastname + d_h.request_user.firstname if d_h.request_user.present? %></td>
             <td style="text-align: left;"><%= d_h.issue.subject %></td>
