権限名の修正

--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -104,7 +104,7 @@
     <div class="search_condition tabular">
       <div class="splitcontent">
         <div class="splitcontentleft">
-          <%= submit_tag l(:permission_request_delivery) %>
+          <%= submit_tag l(:request_delivery) %>
         </div>
       </div>
     </div>
